--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
+    "react": "^16.8.2",
+    "react-art": "^16.8.2",
     "react-dom": "^16.8.6",
+    "react-native": "^0.59.0-rc.1",
+    "react-native-web": "^0.10.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
